RenderTextHarfBuzz: treat 「」 as brackets.

Brackets have the "common script" unicode property and need special handling
when breaking runs (see http://www.unicode.org/reports/tr24/#Common ).

Currently, emoji breaks runs correctly around other bracket and quote mark
types, but not around 「」, which is commonly used in CJK languages.

Bug: 843426, 396776
Change-Id: Ia5ff5165d5c260aa1876488e2f51d566f2164cd6
Reviewed-on: https://chromium-review.googlesource.com/1146401
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577345}
Former-commit-id: ac7c259316c75aad05150d0a5948787efd9e1803