ui/gfx/render_text_harfbuzz.cc
@@ -65,10 +65,13 @@ bool IsUnusualBlockCode(UBlockCode block_code) {
          block_code == UBLOCK_MISCELLANEOUS_SYMBOLS;
 }
 
+// Returns true if |character| is a bracket. This is used to avoid "matching"
+// brackets picking different font fallbacks, thereby appearing mismatched.
 bool IsBracket(UChar32 character) {
-  static const char kBrackets[] = { '(', ')', '{', '}', '<', '>', };
-  static const char* kBracketsEnd = kBrackets + arraysize(kBrackets);
-  return std::find(kBrackets, kBracketsEnd, character) != kBracketsEnd;
+  // 0x300c and 0x300d are「foo」 style brackets.
+  constexpr UChar32 kBrackets[] = {'(', ')', '{',       '}',
+                                   '<', '>', L'\u300c', L'\u300d'};
+  return base::ContainsValue(kBrackets, character);
 }
 
 // If the given scripts match, returns the one that isn't USCRIPT_INHERITED,
